<resources>
    <string name="app_name">SCOOBY</string>
    <string name="terms_of_services"><u>Terms of Services</u></string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="and">and</string>
    <string name="sign_in_to_watch_videos_with_friends">sign in to watch videos with friends</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_or_phone">Enter Phone Number</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="sign_up_here">Sign up Here</string>
    <string name="new_customer">New Customer ?</string>
    <string name="verification_code_sent_to">Verification code sent to <u>%s</u></string>
    <string name="verify">Verify OTP</string>
    <string name="message">Message</string>
    <string name="search_all_contact_name_for_scooby">Search All contact name for scooby</string>
    <string name="recent_users">Recent Users</string>
    <string name="search_all_recent_scooby_users">Search All Recent Scooby Users</string>
    <string name="premium">Premium</string>
    <string name="connected_accounts">Connected accounts</string>
    <string name="social">Social</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="youtube">YouTube</string>
    <string name="feedback">Feedback</string>
    <string name="rate_now">Rate Now</string>
    <string name="Logout"><u>Logout</u></string>
    <string name="Login"><u>Login</u></string>
    <string name="change_Photo"><u>Change Photo</u></string>
    <string name="if_you_enjoy_using_this_app_please_take_a_moment_to_rate_it_thank_for_your_support">If you enjoy using this app, please take a moment to rate it.\nThank for your support !</string>
    <string name="logout">Logout</string>
    <string name="invite_to_the_scooby">Invite to the scooby</string>
    <string name="map_api">AIzaSyD2uQeEV3poI7BUf86Zni_NLuv7RvGVc9U</string>
    <string name="Yes">yes</string>
    <string name="No">No</string>
    <string name="default_notification_channel_id">scooby_channel</string>
    <string name="sign_in_with_otp"><u>Sign in with OTP</u></string>
    <string name="forgot_password">Forgot Password</string>

</resources>