<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".auth.fragment.OtpFragment">


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_3sdp"
        android:background="@drawable/logo_small"
        app:layout_constraintEnd_toStartOf="@+id/txtAppName"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_33sdp"
        android:fontFamily="@font/oswald_bold"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/_25sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Enter OTP"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />


    <TextView
        android:id="@+id/txtVerificationCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_100sdp"
        android:text="@string/verification_code_sent_to"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgLogo">

    </TextView>


    <com.goodiebag.pinview.Pinview
        android:id="@+id/pinOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        app:cursorVisible="false"
        app:forceKeyboard="false"
        app:hint="0"
        app:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVerificationCode"
        app:password="false"
        app:pinHeight="40dp"
        app:pinLength="5"
        app:pinWidth="40dp">

    </com.goodiebag.pinview.Pinview>


    <TextView
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:textColor="@color/white"
        android:text="didn't receive OTP in 5 minutes, call support 8552820296"
        android:layout_marginBottom="@dimen/_30sdp"
        app:layout_constraintBottom_toTopOf="@id/btVerify"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    </TextView>


    <ProgressBar
        android:id="@+id/progress_circular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ProgressBar>



    <Button
        android:id="@+id/btVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/semiTransparentColor"
        android:text="@string/verify"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent">

    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>