<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".auth.fragment.LoginFragment">


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_3sdp"
        android:background="@drawable/logo_small"
        app:layout_constraintEnd_toStartOf="@+id/txtAppName"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_33sdp"
        android:fontFamily="@font/oswald_bold"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/_25sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <RadioGroup
        android:id="@+id/toggle"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/white_outline_toggle_homescreen"
        android:checkedButton="@+id/offer"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_50sdp"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo">


        <RadioButton
            android:id="@+id/btnlogin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_widget_background"
            android:button="@null"
            android:gravity="center"
            android:text="LOGIN"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />

        <RadioButton
            android:id="@+id/SignUpHere"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="SIGNUP"
            android:textColor="@color/pinkpurple"
            android:textSize="@dimen/_13sdp" />
    </RadioGroup>


    <EditText

        android:id="@+id/edUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:paddingLeft="@dimen/_10sdp"
        android:hint="@string/email_or_phone"
        app:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="number"
        android:maxLength="10"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@id/toggle"
        app:layout_constraintVertical_bias="0.13"
        >


    </EditText>


    <EditText

        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:paddingStart="@dimen/_10sdp"
        android:inputType="textPassword"
        app:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/edUserName">


    </EditText>



    <!--<Button
        android:id="@+id/showPassword"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/logo"
        app:layout_constraintHorizontal_bias=".99"
        app:layout_constraintBottom_toBottomOf="@+id/edPassword"
        app:layout_constraintEnd_toEndOf="@+id/edPassword"
        app:layout_constraintStart_toStartOf="@+id/edPassword">

    </Button>-->


    <Button
        android:id="@+id/btLogin"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="60dp"
        android:foreground="?actionBarItemBackground"
        android:background="@drawable/white_outline_toggle_homescreen"
        android:text="Login"
        android:textColor="@color/darkpurple"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edPassword">

    </Button>

    <Button
        android:textSize="@dimen/_14sdp"
        android:id="@+id/btSignInWithOtp"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginBottom="52dp"
        android:background="@color/transparent"
        android:foreground="?android:selectableItemBackground"
        android:text="@string/sign_in_with_otp"
        android:textAllCaps="false"
        android:visibility="gone"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btLogin"
        app:layout_constraintVertical_bias="0.32">

    </Button>

    <Button
        android:id="@+id/btForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginBottom="52dp"
        android:background="@color/transparent"
        android:foreground="?android:selectableItemBackground"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/skublue"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toStartOf="@id/btLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edPassword"
        >

    </Button>


    <!-- <Button
         android:id="@+id/showPassword"
         android:layout_width="120dp"
         android:layout_height="30dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="200dp"
         android:foreground="?actionBarItemBackground"
         android:background="@drawable/white_outline_toggle_homescreen"
         android:text="showPW"
         android:textColor="@color/darkpurple"
         android:textSize="@dimen/_12sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edPassword">

     </Button>-->

    <Button
        android:id="@+id/btGuestLogin"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginBottom="52dp"
        android:background="@color/transparent"
        android:text="Guest Login"
        android:textAllCaps="false"
        android:visibility="gone"
        android:textColor="@color/white"
        android:foreground="?android:selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintStart_toStartOf="parent">

    </Button>

   <!-- <Button
        android:id="@+id/"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/coror_redious"
        android:paddingLeft="@dimen/_8sdp"
        android:text="Create +"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edPassword">

    </Button>-->

    <ProgressBar
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/progress_circular"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ProgressBar>


</androidx.constraintlayout.widget.ConstraintLayout>